       empty log message. (Stefan)
- BUG: Issue #273: quotes are not escaped
       in repo browser. (Stefan)
- BUG: Issue #274: exception when dragging. (Stefan)
- BUG: Issue #275: "repair move" fails if
       target dir is missing/deleted. (Stefan)
- BUG: Issue #276: exception if more than 192 user
       defined properties are found. (Stefan)
- BUG: Issue #278: Scrolling in IDiff. (Stefan)

Version 1.7.6
- BUG: Issue #209: repo browser doesn't
       handle putty session names. (Stefan)
- BUG: Issue #216: Apply patch marks deleted
       files as "missing". (Stefan)
- BUG: Issue #177: TortoiseMerge truncates
       long lines. (Stefan)
- BUG: Issue #218: log dialog export uses
       wrong files when sorted. (Stefan)
- BUG: Issue #220: tripple-click on empty space
       crashes TortoiseMerge. (Stefan)
- BUG: Issue #221: diff uses wrong tool in case the
       filename matches a registered extension. (Stefan)
- BUG: Issue #222: log dialog does not refresh
       to HEAD. (Stefan)
- BUG: Issue #223: overlays not shown if wc
       contains unversioned folders. (Stefan)
- CHG: Issue #224: use crashrpt. (Stefan)
- BUG: Issue #225: Error when creating a
       branch/tag from log dialog. (Stefan)
- BUG: Issue #226: context commands for
       externals can fail. (Stefan)
- BUG: Issue #228: commit dialog fails
       to enable OK button. (Stefan)
- BUG: Issue #230: Global Ignore Broken
       for Directories. (Stefan)
- BUG: Issue #231: 'show log' fails for
       deleted entry. (Stefan)

Version 1.7.5
- BUG: Issue #184: Refresh in log dialog only refreshes
       the last fetched block. (Stefan)
- BUG: Issue #185: apply patch from clipboard fails
       for direct items. (Stefan)
- BUG: Issue #186: Overlays can crash the 
       shell. (Stefan)
- BUG: Issue #188: edit log message fails to edit
       case changes. (Stefan)
- BUG: Issue #191: SubWRev fails when started
       from a short path. (Stefan)
- BUG: Issue #192: CL client does not